Fix explorer tree is not showing all properties while scrolling

--- a/packages/legend-extension-dsl-data-space/style/_data-space-query-plugin.scss
+++ b/packages/legend-extension-dsl-data-space/style/_data-space-query-plugin.scss
@@ -42,6 +42,7 @@
 
     .query-builder__side-bar__content {
       height: 100%;
+      overflow: auto;
     }
   }
 
